Información extra HTML+CSS

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -18,15 +18,15 @@
   Try again, fail again, fail better
   Samuel Beckett
 
-  <!-- insertar nueva tarea -->
+  [insertar nueva tarea]
 
-  <!--checkbox -->
+  [checkbox]
   Tarea 1
-  <!-- botón -->
+  [botón X]
 
-  <!-- checkbox marcada -->
+  [checkbox marcada]
   Tarea 2
-  <!-- botón -->
+  [botón X]
 
   Made by ______
 </body>
