Commented js sources

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Curso JavaScript</title>
   <script src="00.hello.js"></script>
-  <script src="01.core.js"></script>
-  <script src="02.array.js"></script>
-  <script src="02b.array.cool.js"></script>
-  <script src="03.string.js"></script>
+  <!--<script src="01.core.js"></script>-->
+  <!--<script src="02.array.js"></script>-->
+  <!--<script src="02b.array.cool.js"></script>-->
+  <!--<script src="03.string.js"></script>-->
 </head>
 <body>
   
