--- a/final/index.html
+++ b/final/index.html
@@ -5,23 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>To-do list</title>
   <link rel="stylesheet" href="index.css">
+  <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
   <header class="header"><h1>Lista de tareas</h1></header>
   <aside class="extras">
-    <h2>Instituciones</h2>
+    <h2>Links</h2>
     <ul>
       <li><a href="http://www.upm.es">Universidad Politécnica de Madrid</a></li>
       <li><a href="http://www.fi.upm.es">E.T.S. Ingenieros Informáticos</a></li>
       <li><a href="http://acm.asoc.fi.upm.es/">ACM</a></li>
-    </ul>
-
-    <h2>Comunidades</h2>
-    <ul>
-      <li>MadridJS</li>
-      <li>HTML5-Spain</li>
-      <li>Madrid Functional Programming</li>
     </ul>
 
     <blockquote>
